Fix blurry file icon

--- a/packages/@uppy/dashboard/src/style.scss
+++ b/packages/@uppy/dashboard/src/style.scss
@@ -756,7 +756,7 @@ a.uppy-Dashboard-poweredBy {
 
 
 .uppy-DashboardItem-previewIconWrap {
-  height: 75px;
+  height: 76px;
   max-height: 75%;
   position: relative;
 }
